refactor: change twinphy names to vidibattle

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Dashboard - NiceAdmin Bootstrap Template</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <title>VidiBattle Admin</title>
+    <meta name="description" content="VidiBattle Admin - Admin Dashboard" />
+    <meta property="og:title" content="VidiBattle Admin" />
+    <meta property="og:description" content="Admin Dashboard for VidiBattle" />
 
     <!-- Favicons -->
     <link href="/assets/img/favicon.png" rel="icon" />
